<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.advancedfinance.overview.presentation.screen.OverviewFragment"
    tools:ignore="ResourceName">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view_account_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:longClickable="false"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/core_md_theme_light_primary">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_title_card_account_balance"
                style="@style/CoreStyleTextSize16Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/overview_text_view_card_account_balance"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintBottom_toBottomOf="@id/text_view_title_card_account_balance"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.884"
                app:layout_constraintStart_toEndOf="@id/text_view_title_card_account_balance"
                app:layout_constraintTop_toTopOf="@id/text_view_title_card_account_balance"
                app:layout_constraintVertical_bias="0.558" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_value_card_account_balance"
                style="@style/CoreStyleTextSize24Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="16dp"
                android:textColor="@color/core_md_theme_light_primary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_title_card_account_balance"
                tools:text="R$ 8.000,00" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view_expenses_of_the_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:longClickable="false"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_view_account_balance"
        app:strokeColor="@color/core_md_theme_light_primary">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_title_card_expenses_of_the_day"
                style="@style/CoreStyleTextSize16Bold"
                android:layout_width="116dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/overview_text_view_card_expenses_of_the_day"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_value_card_expenses_of_the_day"
                style="@style/CoreStyleTextSize16Bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="84dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:textColor="@color/core_seed"
                app:layout_constraintBottom_toBottomOf="@id/text_view_title_card_expenses_of_the_day"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/text_view_title_card_expenses_of_the_day"
                app:layout_constraintTop_toTopOf="@id/text_view_title_card_expenses_of_the_day"
                app:maxLines="1"
                tools:text="R$ 8.000,00" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:longClickable="false"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_view_expenses_of_the_day"
        app:strokeColor="@color/core_md_theme_light_primary">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_title_card_overview"
                style="@style/CoreStyleTextSize16Bold"
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/overview_text_view_card_overview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_date_card_overview"
                style="@style/CoreStyleTextSize16Bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="94dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="@id/text_view_title_card_overview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/text_view_title_card_overview"
                app:layout_constraintTop_toTopOf="@id/text_view_title_card_overview"
                tools:text="Jan 2023" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_title_card_overview_revenues"
                style="@style/CoreStyleTextSize12Bold"
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/overview_text_view_card_revenues"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_title_card_overview" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_date_card_overview_revenues"
                style="@style/CoreStyleTextSize16Bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="94dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:textColor="@color/core_seed"
                app:layout_constraintBottom_toBottomOf="@id/text_view_title_card_overview_revenues"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toEndOf="@id/text_view_title_card_overview_revenues"
                app:layout_constraintTop_toTopOf="@id/text_view_title_card_overview_revenues"
                app:layout_constraintVertical_bias="0.0"
                app:maxLines="1"
                tools:text="R$ 8.000,00" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_title_card_overview_expenses"
                style="@style/CoreStyleTextSize12Bold"
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/overview_text_view_card_expenses"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_title_card_overview_revenues" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_date_card_overview_expenses"
                style="@style/CoreStyleTextSize16Bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="94dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:textColor="@color/core_md_theme_light_error"
                app:layout_constraintBottom_toBottomOf="@id/text_view_title_card_overview_expenses"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/text_view_title_card_overview_expenses"
                app:layout_constraintTop_toTopOf="@id/text_view_title_card_overview_expenses"
                app:maxLines="1"
                tools:text="R$ 12.000,00" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button"
        style="?attr/floatingActionButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:focusable="true"
        android:src="@drawable/overview_ic_add"
        app:contentDescription="@string/overview_text_description_add_revenues"
        app:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button_revenues"
        style="?attr/floatingActionButtonSmallStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:focusable="true"
        android:src="@drawable/overview_ic_trending_up"
        android:visibility="invisible"
        app:contentDescription="@string/overview_text_description_add_revenues"
        app:elevation="6dp"
        app:layout_constraintBottom_toTopOf="@id/floating_action_button"
        app:layout_constraintEnd_toEndOf="@id/floating_action_button" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_floating_action_button_revenues"
        style="@style/CoreStyleTextSize12Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/overview_text_view_add_revenues"
        android:textColor="@color/core_md_theme_light_tertiary"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/floating_action_button_revenues"
        app:layout_constraintEnd_toStartOf="@id/floating_action_button_revenues"
        app:layout_constraintTop_toTopOf="@id/floating_action_button_revenues" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button_expenses"
        style="?attr/floatingActionButtonSmallStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:focusable="true"
        android:src="@drawable/overview_ic_trending_down"
        android:visibility="invisible"
        app:contentDescription="@string/overview_text_description_add_expenses"
        app:elevation="6dp"
        app:layout_constraintBottom_toTopOf="@id/floating_action_button_revenues"
        app:layout_constraintEnd_toEndOf="@id/floating_action_button_revenues" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_floating_action_button_expenses"
        style="@style/CoreStyleTextSize12Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/overview_text_view_add_expenses"
        android:textColor="@color/core_md_theme_light_error"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/floating_action_button_expenses"
        app:layout_constraintEnd_toStartOf="@id/floating_action_button_expenses"
        app:layout_constraintTop_toTopOf="@id/floating_action_button_expenses" />
</androidx.constraintlayout.widget.ConstraintLayout>